force-app/main/default/objects/PricebookEntry/fields/vlocity_ins__DRProgressData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DRProgressData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DRProgressData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>