force-app/main/default/objects/PricebookEntry/fields/vlocity_ins__DRStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DRStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DRStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>